; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_ruleutils.c_pg_get_table_grants.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_ruleutils.c_pg_get_table_grants.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_12__ = type { i64 }
%struct.TYPE_11__ = type { i32 }

@NIL = common dso_local global i32* null, align 8
@AccessShareLock = common dso_local global i32 0, align 4
@RELOID = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_TABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"relation with OID %u does not exist\00", align 1
@Anum_pg_class_relacl = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"REVOKE ALL ON %s FROM PUBLIC\00", align 1
@N_ACL_RIGHTS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@AUTHOID = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [32 x i8] c"cache lookup failed for role %u\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"PUBLIC\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c" WITH GRANT OPTION\00", align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"GRANT %s ON %s TO %s%s\00", align 1
@NoLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pg_get_table_grants(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_10__, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_12__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_12__*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca %struct.TYPE_11__*, align 8
  store i64 %0, i64* %2, align 8
  store i32* null, i32** %4, align 8
  store i8* null, i8** %5, align 8
  %20 = load i32*, i32** @NIL, align 8
  store i32* %20, i32** %6, align 8
  store i32* null, i32** %7, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %21 = load i64, i64* %2, align 8
  %22 = load i32, i32* @AccessShareLock, align 4
  %23 = call i32* @relation_open(i64 %21, i32 %22)
  store i32* %23, i32** %4, align 8
  %24 = load i64, i64* %2, align 8
  %25 = load i32*, i32** @NIL, align 8
  %26 = call i8* @generate_relation_name(i64 %24, i32* %25)
  store i8* %26, i8** %5, align 8
  %27 = call i32 @initStringInfo(%struct.TYPE_10__* %3)
  %28 = load i32, i32* @RELOID, align 4
  %29 = load i64, i64* %2, align 8
  %30 = call i32 @ObjectIdGetDatum(i64 %29)
  %31 = call i32* @SearchSysCache1(i32 %28, i32 %30)
  store i32* %31, i32** %7, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i64 @HeapTupleIsValid(i32* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %42, label %35

35:                                               ; preds = %1
  %36 = load i32, i32* @ERROR, align 4
  %37 = load i32, i32* @ERRCODE_UNDEFINED_TABLE, align 4
  %38 = call i32 @errcode(i32 %37)
  %39 = load i64, i64* %2, align 8
  %40 = call i32 @errmsg(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i64 %39)
  %41 = call i32 @ereport(i32 %36, i32 %40)
  br label %42

42:                                               ; preds = %35, %1
  %43 = load i32, i32* @RELOID, align 4
  %44 = load i32*, i32** %7, align 8
  %45 = load i32, i32* @Anum_pg_class_relacl, align 4
  %46 = call i32 @SysCacheGetAttr(i32 %43, i32* %44, i32 %45, i32* %9)
  store i32 %46, i32* %8, align 4
  %47 = load i32*, i32** %7, align 8
  %48 = call i32 @ReleaseSysCache(i32* %47)
  %49 = load i32, i32* %9, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %158, label %51

51:                                               ; preds = %42
  store i32 0, i32* %10, align 4
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %11, align 8
  store i32* null, i32** %12, align 8
  store i32 0, i32* %13, align 4
  %52 = load i8*, i8** %5, align 8
  %53 = call i32 (%struct.TYPE_10__*, i8*, i8*, ...) @appendStringInfo(%struct.TYPE_10__* %3, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %52)
  %54 = load i32*, i32** %6, align 8
  %55 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %3, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @pstrdup(i32 %56)
  %58 = call i32* @lappend(i32* %54, i32 %57)
  store i32* %58, i32** %6, align 8
  %59 = call i32 @resetStringInfo(%struct.TYPE_10__* %3)
  %60 = load i32, i32* %8, align 4
  %61 = call i32* @DatumGetAclP(i32 %60)
  store i32* %61, i32** %12, align 8
  %62 = load i32*, i32** %12, align 8
  %63 = call %struct.TYPE_12__* @ACL_DAT(i32* %62)
  store %struct.TYPE_12__* %63, %struct.TYPE_12__** %11, align 8
  store i32 -1, i32* %13, align 4
  store i32 0, i32* %10, align 4
  br label %64

64:                                               ; preds = %156, %51
  %65 = load i32, i32* %10, align 4
  %66 = load i32*, i32** %12, align 8
  %67 = call i32 @ACL_NUM(i32* %66)
  %68 = icmp slt i32 %65, %67
  br i1 %68, label %69, label %157

69:                                               ; preds = %64
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %14, align 8
  store i32 0, i32* %15, align 4
  %70 = load i32, i32* %13, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %13, align 4
  %72 = load i32, i32* %13, align 4
  %73 = load i32, i32* @N_ACL_RIGHTS, align 4
  %74 = icmp eq i32 %72, %73
  br i1 %74, label %75, label %84

75:                                               ; preds = %69
  store i32 0, i32* %13, align 4
  %76 = load i32, i32* %10, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* %10, align 4
  %78 = load i32, i32* %10, align 4
  %79 = load i32*, i32** %12, align 8
  %80 = call i32 @ACL_NUM(i32* %79)
  %81 = icmp sge i32 %78, %80
  br i1 %81, label %82, label %83

82:                                               ; preds = %75
  br label %157

83:                                               ; preds = %75
  br label %84

84:                                               ; preds = %83, %69
  %85 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %86 = load i32, i32* %10, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %85, i64 %87
  store %struct.TYPE_12__* %88, %struct.TYPE_12__** %14, align 8
  %89 = load i32, i32* %13, align 4
  %90 = shl i32 1, %89
  store i32 %90, i32* %15, align 4
  %91 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %92 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %91, i32 0, i32 0
  %93 = load i64, i64* %92, align 8
  %94 = call i32 @ACLITEM_GET_PRIVS(i64 %93)
  %95 = load i32, i32* %15, align 4
  %96 = and i32 %94, %95
  %97 = icmp ne i32 %96, 0
  br i1 %97, label %98, label %156

98:                                               ; preds = %84
  store i8* null, i8** %16, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %17, align 8
  %99 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %100 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %99, i32 0, i32 0
  %101 = load i64, i64* %100, align 8
  %102 = icmp ne i64 %101, 0
  br i1 %102, label %103, label %131

103:                                              ; preds = %98
  %104 = load i32, i32* @AUTHOID, align 4
  %105 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %106 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %105, i32 0, i32 0
  %107 = load i64, i64* %106, align 8
  %108 = call i32 @ObjectIdGetDatum(i64 %107)
  %109 = call i32* @SearchSysCache1(i32 %104, i32 %108)
  store i32* %109, i32** %18, align 8
  %110 = load i32*, i32** %18, align 8
  %111 = call i64 @HeapTupleIsValid(i32* %110)
  %112 = icmp ne i64 %111, 0
  br i1 %112, label %113, label %124

113:                                              ; preds = %103
  %114 = load i32*, i32** %18, align 8
  %115 = call i64 @GETSTRUCT(i32* %114)
  %116 = inttoptr i64 %115 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %116, %struct.TYPE_11__** %19, align 8
  %117 = load %struct.TYPE_11__*, %struct.TYPE_11__** %19, align 8
  %118 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %117, i32 0, i32 0
  %119 = load i32, i32* %118, align 4
  %120 = call i32 @NameStr(i32 %119)
  %121 = call i8* @quote_identifier(i32 %120)
  store i8* %121, i8** %16, align 8
  %122 = load i32*, i32** %18, align 8
  %123 = call i32 @ReleaseSysCache(i32* %122)
  br label %130

124:                                              ; preds = %103
  %125 = load i32, i32* @ERROR, align 4
  %126 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %127 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %126, i32 0, i32 0
  %128 = load i64, i64* %127, align 8
  %129 = call i32 @elog(i32 %125, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0), i64 %128)
  br label %130

130:                                              ; preds = %124, %113
  br label %132

131:                                              ; preds = %98
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8** %16, align 8
  br label %132

132:                                              ; preds = %131, %130
  %133 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %134 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %133, i32 0, i32 0
  %135 = load i64, i64* %134, align 8
  %136 = call i32 @ACLITEM_GET_GOPTIONS(i64 %135)
  %137 = load i32, i32* %15, align 4
  %138 = and i32 %136, %137
  %139 = icmp ne i32 %138, 0
  br i1 %139, label %140, label %141

140:                                              ; preds = %132
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0), i8** %17, align 8
  br label %141

141:                                              ; preds = %140, %132
  %142 = load i32, i32* %15, align 4
  %143 = call i32 @convert_aclright_to_string(i32 %142)
  %144 = sext i32 %143 to i64
  %145 = inttoptr i64 %144 to i8*
  %146 = load i8*, i8** %5, align 8
  %147 = load i8*, i8** %16, align 8
  %148 = load i8*, i8** %17, align 8
  %149 = call i32 (%struct.TYPE_10__*, i8*, i8*, ...) @appendStringInfo(%struct.TYPE_10__* %3, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0), i8* %145, i8* %146, i8* %147, i8* %148)
  %150 = load i32*, i32** %6, align 8
  %151 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %3, i32 0, i32 0
  %152 = load i32, i32* %151, align 4
  %153 = call i32 @pstrdup(i32 %152)
  %154 = call i32* @lappend(i32* %150, i32 %153)
  store i32* %154, i32** %6, align 8
  %155 = call i32 @resetStringInfo(%struct.TYPE_10__* %3)
  br label %156

156:                                              ; preds = %141, %84
  br label %64

157:                                              ; preds = %82, %64
  br label %158

158:                                              ; preds = %157, %42
  %159 = call i32 @resetStringInfo(%struct.TYPE_10__* %3)
  %160 = load i32*, i32** %4, align 8
  %161 = load i32, i32* @NoLock, align 4
  %162 = call i32 @relation_close(i32* %160, i32 %161)
  %163 = load i32*, i32** %6, align 8
  ret i32* %163
}

declare dso_local i32* @relation_open(i64, i32) #1

declare dso_local i8* @generate_relation_name(i64, i32*) #1

declare dso_local i32 @initStringInfo(%struct.TYPE_10__*) #1

declare dso_local i32* @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i64) #1

declare dso_local i64 @HeapTupleIsValid(i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i64) #1

declare dso_local i32 @SysCacheGetAttr(i32, i32*, i32, i32*) #1

declare dso_local i32 @ReleaseSysCache(i32*) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_10__*, i8*, i8*, ...) #1

declare dso_local i32* @lappend(i32*, i32) #1

declare dso_local i32 @pstrdup(i32) #1

declare dso_local i32 @resetStringInfo(%struct.TYPE_10__*) #1

declare dso_local i32* @DatumGetAclP(i32) #1

declare dso_local %struct.TYPE_12__* @ACL_DAT(i32*) #1

declare dso_local i32 @ACL_NUM(i32*) #1

declare dso_local i32 @ACLITEM_GET_PRIVS(i64) #1

declare dso_local i64 @GETSTRUCT(i32*) #1

declare dso_local i8* @quote_identifier(i32) #1

declare dso_local i32 @NameStr(i32) #1

declare dso_local i32 @elog(i32, i8*, i64) #1

declare dso_local i32 @ACLITEM_GET_GOPTIONS(i64) #1

declare dso_local i32 @convert_aclright_to_string(i32) #1

declare dso_local i32 @relation_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
